<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/credits"
                    android:autoLink="web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            <LinearLayout android:layout_height="25dp" android:layout_width="match_parent"/>
            <TextView
                    android:text="@string/credits2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            <LinearLayout android:layout_height="25dp" android:layout_width="match_parent"/>
            <TextView
                    android:text="@string/credits3"
                    android:autoLink="email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>
    </ScrollView>

</LinearLayout>