<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/tut1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            <LinearLayout android:layout_height="25dp" android:layout_width="match_parent"/>
            <TextView
                    android:text="@string/tut2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            <LinearLayout android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_width="match_parent">
                <ImageView
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:src="@drawable/tut1"
                        android:layout_height="match_parent" />
                <ImageView
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/tut2"
                        android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                    android:text="@string/tut3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            <LinearLayout android:layout_height="25dp" android:layout_width="match_parent"/>
            <ImageView
                    android:layout_margin="2dp"
                    android:layout_width="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/tut3"
                    android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>